image not showing fix

--- a/src/pages/thankyou/thankyou.module.css
+++ b/src/pages/thankyou/thankyou.module.css
@@ -80,3 +80,6 @@ p {
         color: var(--clr-secondary);
     }
 }
+.other_items {
+    text-decoration: underline;
+}
